# poker-hud

./: .gitignore  CLAUDE.md  Info.plist  Makefile  main.py  pyproject.toml  setup_py2app.py
.claude/agents/: architect-agent.md  data-engineer-agent.md  devops-agent.md  ml-engineer-agent.md  qa-agent.md  swe-agent.md
scripts/: build.py  build_config.py  package.py
src/: __init__.py  app.py
src/capture/: __init__.py  capture_pipeline.py  demo_capture.py  frame_poller.py  pipeline.py  screen_capture.py  window_detector.py
src/common/: __init__.py  config.py  logging.py  performance.py
src/detection/: __init__.py  card.py  card_recognition.py  cnn_detector.py  dataset.py  demo_detection.py  detection_pipeline.py  generate_templates.py  ocr_engine.py  player_identifier.py  recognition_pipeline.py  synthetic_generator.py  table_regions.py  template_matcher.py  train_cnn.py  validation.py
src/engine/: __init__.py  coordinator.py  game_state.py  game_state_coordinator.py  hand_history.py  hand_history_parser.py  hand_phase_tracker.py  hand_tracker.py  state_validator.py
src/overlay/: __init__.py  demo_overlay.py  hud_stats.py  overlay_window.py  settings_panel.py  solver_panel.py
src/solver/: __init__.py  advisor_coordinator.py  equity.py  equity_calculator.py  postflop_advisor.py  preflop_ranges.py  range_estimator.py  strategy_advisor.py
src/stats/: __init__.py  aggregator.py  calculations.py  connection.py  connection_manager.py  database.py  hand_repository.py  player_stats_repository.py  repository.py  stats_aggregator.py
tests/: conftest.py
(+45 files in other folders)
